--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^4.4.8",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "yelp": "^1.0.1"
   },
   "devDependencies": {},
